--- a/package.json
+++ b/package.json
@@ -4,5 +4,13 @@
   "description": "aplicacion web que convierte numeros a diferentes bases",
   "main": "index.js",
   "author": "wilian",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --mode development --open --port=4004"
+  },
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
