resolviendo problemas de ruta

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "wilian",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --port=4004"
+    "start": "webpack-dev-server --mode development --open --port=4004",
+    "dev": "webpack-dev-server --mode production"
   },
   "devDependencies": {
     "webpack": "^4.43.0",
